# test_registration

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
pages/: registration_page.py
tests/: conftest.py  test_registration.py
