[tool.poetry]
name = "koshelek"
version = "0.1.0"
description = ""
authors = ["Yuhen Liubimov <yauhenliubimau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.2"
pytest = "^8.0.1"
pytest-playwright = "^0.4.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.mypy]
cache_dir = ".venv/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
    ".venv",
    ".github",
    ".idea",
    ".vscode",
    "venv",
]
files = ["."]
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true


[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    | .*\.venv.*
    | .*\.idea.*
    | .*\.vscode.*
)
'''

[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".venv",
]

[tool.pytest.ini_options]
cache_dir = ".venv/pytest/"
console_output_style = "count"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
